samples/_failures_safe/1761393768_b4d9cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f52470f8.c: In function ‘main’:
./samples/SAFE/__tmp_f52470f8.c:177:25: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  177 |     for (int i = 0; i < token
      |                         ^~~~~
      |                         Token
./samples/SAFE/__tmp_f52470f8.c:177:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f52470f8.c:177:30: error: expected ‘;’ at end of input
  177 |     for (int i = 0; i < token
      |                              ^
      |                              ;
./samples/SAFE/__tmp_f52470f8.c:177:5: error: expected declaration or statement at end of input
  177 |     for (int i = 0; i < token
      |     ^~~
